--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "3d-react-carousal": "^4.0.2",
     "aos": "^2.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
+    "react-slideshow-image": "^3.5.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
