--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
   "devDependencies": {
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
+    "randomcolor": "^0.6.2",
+    "react-spinners": "^0.11.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
   }
 }
