--- a/package.json
+++ b/package.json
@@ -25,13 +25,26 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.8.8",
+    "css-doodle": "^0.20.2",
+    "gh-pages": "^3.2.3",
+    "postcss": "^7.0.39",
+    "prettier": "^2.4.1",
+    "randomcolor": "^0.6.2",
+    "react-spinners": "^0.11.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
   },
   "browserslist": {
     "production": [
@@ -43,14 +56,7 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^9.8.8",
-    "css-doodle": "^0.20.2",
-    "postcss": "^7.0.39",
-    "randomcolor": "^0.6.2",
-    "react-spinners": "^0.11.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
+    ],
+    "homepage": "http://spec-nith.github.io/Electrothon"
   }
 }
