--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
     "react": "^17.0.2",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
@@ -44,6 +45,7 @@
     "prettier": "^2.4.1",
     "randomcolor": "^0.6.2",
     "react-spinners": "^0.11.0",
+    "sass": "^1.43.4",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
   },
   "browserslist": {
