--- a/package.json
+++ b/package.json
@@ -41,10 +41,13 @@
     "autoprefixer": "^9.8.8",
     "css-doodle": "^0.20.2",
     "gh-pages": "^3.2.3",
+    "gsap": "^3.8.0",
     "postcss": "^7.0.39",
     "prettier": "^2.4.1",
     "randomcolor": "^0.6.2",
+    "react-countup": "^6.1.0",
     "react-spinners": "^0.11.0",
+    "react-visibility-sensor": "^5.1.1",
     "sass": "^1.43.4",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
   },
