--- a/package.json
+++ b/package.json
@@ -10,17 +10,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@headlessui/react": "^1.4.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
     "react": "^17.0.2",
-    "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
-    "react-slideshow-image": "^3.5.1",
-    "web-vitals": "^1.1.2"
+    "swiper": "^7.4.1"
   },
   "scripts": {
     "start": "craco start",
@@ -39,16 +34,12 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.8",
-    "css-doodle": "^0.20.2",
     "gh-pages": "^3.2.3",
     "gsap": "^3.8.0",
     "postcss": "^7.0.39",
     "prettier": "^2.4.1",
     "randomcolor": "^0.6.2",
-    "react-countup": "^6.1.0",
     "react-spinners": "^0.11.0",
-    "react-visibility-sensor": "^5.1.1",
-    "sass": "^1.43.4",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
   },
   "browserslist": {
