--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
+    "@fortawesome/react-fontawesome": "^0.1.19",
     "@headlessui/react": "^1.4.1",
     "aos": "^2.3.4",
+    "i": "^0.3.7",
+    "npm": "^9.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
