--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
     "framer-motion": "^8.0.2",
+    "gh-pages": "^5.0.0",
     "i": "^0.3.7",
     "npm": "^9.2.0",
     "react": "^18.2.0",
