--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "npm": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.3.5",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
