--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://electrothon.nith.ac.in/",
   "name": "elect-5",
   "version": "0.1.0",
   "private": true,
@@ -17,7 +18,6 @@
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
     "framer-motion": "^8.0.2",
-    "gh-pages": "^5.0.0",
     "i": "^0.3.7",
     "npm": "^9.2.0",
     "react": "^18.2.0",
@@ -59,6 +59,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "gh-pages": "^6.1.0",
     "postcss": "^8.4.20",
     "prettier": "^2.8.4",
     "tailwindcss": "^3.2.4"
